[tool.poetry]
name = "civ-turn"
version = "0.1.0"
description = ""
authors = ["Marcos-Miranda <markinn_mn@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
jupyter = "^1.0.0"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
